--- a/bin/SampleAngular.dll.config
+++ b/bin/SampleAngular.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -41,6 +41,11 @@ that is bundled with the nuget package under the tools folder.
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+        <defaultDocument>
+            <files>
+                <add value="index.aspx" />
+            </files>
+        </defaultDocument>
   </system.webServer>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
