--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -22,10 +22,8 @@ that is bundled with the nuget package under the tools folder.
 -->
   </appSettings>
   <connectionStrings>
-    <remove name="LocalSqlServer" />
-    <!-- Prod -->
-    <add name="LocalSqlServer" connectionString="Server=dev.selectionsoftware.com;Database=animalz;User ID=jbesada;Password=ilikeba$$" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  
+    </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -54,23 +52,6 @@ that is bundled with the nuget package under the tools folder.
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5" requestValidationMode="2.0" maxRequestLength="1048576" />
-    <membership defaultProvider="MySqlProvider" userIsOnlineTimeWindow="15">
-      <providers>
-        <clear />
-        <add name="MySqlProvider" type="System.Web.Security.SqlMembershipProvider" requiresUniqueEmail="false" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" connectionStringName="LocalSqlServer" applicationName="AnimalAid" enablePasswordRetrieval="true" enablePasswordReset="true" requiresQuestionAndAnswer="false" passwordFormat="Clear" />
-      </providers>
-    </membership>
-    <profile>
-      <providers>
-        <clear />
-        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="LocalSqlServer" applicationName="/" />
-      </providers>
-    </profile>
-    <roleManager enabled="true" defaultProvider="SqlProvider">
-      <providers>
-        <clear />
-        <add name="SqlProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="LocalSqlServer" applicationName="AnimalAid" />
-      </providers>
-    </roleManager>
+    
   </system.web>
 </configuration>
