--- a/bin/SampleAngular.dll.config
+++ b/bin/SampleAngular.dll.config
@@ -73,7 +73,7 @@
       </providers>
     </roleManager>
     <authorization>
-      <deny users="?" />
+      <allow users="*" />
     </authorization>
     <authentication mode="Forms">
       <forms loginUrl="Default.aspx" timeout="90" />
